src/main/resources/archetype-resources/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${artifactId}
  labels:
    app: ${artifactId}
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: ${artifactId}
