src/main/resources/archetype-resources/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${artifactId}-ingress
  labels:
    app: ${artifactId}
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: ${artifactId}.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ${artifactId}
                port:
                  number: 8080
